k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tokenlab
spec:
  selector:
    app: tokenlab
  ports:
    - port: 80
      targetPort: 8080
  type: ClusterIP
